introdução da função liga e desliga

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
           <img src="./img/desligada.jpg" alt="lâmpada" id="lamp">
       </div>
         <div>
-        <button id="turnOn">Ligar</button>
-        <button id="turnOff">Desligada</button>
+        <button id="turnOnOff">Ligar</button> 
     </div>
     </main>
     <script src="./lampada.js"></script>
